hphp/test/zend/bad/ext/posix/tests/posix_getgrgid_macosx.php
<?php
$grp = posix_getgrgid(-1);
var_dump($grp['name']);
?>
===DONE===